# star-openbw-wasm

./: .gitignore  README.md
_excluded_backup/game_integrated/: Patch_rt.mpq
game_integrated/: DLL전부복사.bat  DLL확인.bat  build_split.ps1  game_logic.cpp  game_logic.h  log.txt  main.cpp  player_game_complete.cpp  player_input.cpp  player_input.h  sdl2.cpp  sdl_test.cpp  ui_custom.h  빌드_최종.bat  코드 흐름.txt
game_integrated/maps/: (6)New Super.scm
game_integrated/simple_rts/: C++_HTML_비교.md  README.md  build.ps1  build_advanced.ps1  build_advanced.sh  build_sdl.ps1  collision.js  commands.js  simple_game_advanced.cpp  simple_game_sdl.cpp  simple_rts.cpp  test_pathfinding.cpp  test_pathfinding.sh  unit.js  빌드_간단_가이드.md
game_integrated/simple_rts/data/: units.js
game_integrated/starclone_dev/: CMakeLists.txt  README.md
game_integrated/starclone_dev/build_make/: CMakeCache.txt
game_integrated/starclone_dev/include/: korean.h
game_integrated/starclone_dev/src/: main.cpp  main_backup_20251113_1902.cpp  ui_custom.h
game_integrated/test/: IMPROVEMENTS.md  README.md  combat.js  game.css  index.html  main.js  pathfinding.js  renderer.js  selection.js
포팅/: app.js  build_web.ps1  build_web_cmd.cmd  build_web_out_utf8.txt  index.html  run_web_server.cmd  style.css
